Added updates from SageMaker notebooks

--- a/push-updates.ipynb
+++ b/push-updates.ipynb
@@ -2,7 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "170bc5ec-70b2-4266-824d-0835828fcdd1",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00_Data-storage-and-access-via-buckets.ipynb  push-updates.ipynb\n",
+      "01_Intro-train-models.ipynb\t\t      __pycache__\n",
+      "02_Hyperparameter-tuning.ipynb\t\t      README.md\n",
+      "create_large_data.ipynb\t\t\t      train_nn.py\n",
+      "data\t\t\t\t\t      train_xgboost.py\n",
+      "LICENSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "!git config --global user.name \"Chris Endemann\"\n",
+    "!git config --global user.email endeman@wisc.edu\n",
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "04af0a5c-63ed-425b-ade9-a16e12d1ccc7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main cebd4e2] Added updates from SageMaker notebooks\n",
+      " 1 file changed, 92 insertions(+), 2 deletions(-)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add .\n",
+    "!git commit -m \"Added updates from SageMaker notebooks\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "ddc7bc13-645e-425f-a818-e1fe62868c5e",
    "metadata": {
     "tags": []
@@ -45,7 +95,7 @@
       " create mode 100644 push-updates.ipynb\n",
       " create mode 100644 train_nn.py\n",
       " create mode 100644 train_xgboost.py\n",
-      "Username for 'https://github.com/UW-Madison-DataScience/test_AWS.git': "
+      "Username for 'https://github.com/UW-Madison-DataScience/test_AWS.git': ^C\n"
      ]
     }
    ],
@@ -69,7 +119,9 @@
    "id": "d078842d-f831-443b-aabc-19952db295a2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "easdf"
+   ]
   }
  ],
  "metadata": {
