Added updates from Jupyter notebook

--- a/push-updates.ipynb
+++ b/push-updates.ipynb
@@ -34,23 +34,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "140fe9ad-d663-449b-af4f-f4b63fcf3a73",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "import os\n",
-    "\n",
-    "# Replace 'your-token' with your actual GitHub PAT\n",
-    "\n",
-    "# os.environ[\"GITHUB_PAT\"] = \"your_token\"\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e7e4782d-88a0-4702-a8c4-935942cf74e5",
    "metadata": {},
@@ -65,27 +48,48 @@
    "id": "027f1b11-e43b-45ab-8315-a429805452f0",
    "metadata": {},
    "source": [
+    "### Step 2: Use `getpass` to Prompt for Username and PAT\n",
     "\n",
-    "### Step 2: Ensure Git Doesn’t Store Credentials\n",
-    "\n",
-    "To securely enter your GitHub credentials (username and PAT) each time you push, we’ll remove any settings that might save them:\n",
-    "\n",
-    "1. **Unset Credential Helper**: This ensures Git won’t store your credentials between sessions.\n",
-    "\n"
+    "The `getpass` library allows you to input your GitHub username and PAT without exposing them in the notebook. This approach ensures you’re not hardcoding sensitive information.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "86bf00c5-4040-4290-8ea8-e6a9228a2c60",
+   "execution_count": 31,
+   "id": "b41eaac5-69eb-4e88-8bda-1ba7e25a0beb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "GitHub Username:  qualiaMachine\n",
+      "GitHub Personal Access Token (PAT):  ········\n"
+     ]
+    }
+   ],
    "source": [
-    "# Remove any configured Git credential helpers\n",
-    "!git config --global --unset credential.helper\n",
-    "\n"
+    "import getpass\n",
+    "\n",
+    "# Prompt for GitHub username and PAT securely\n",
+    "username = input(\"GitHub Username: \")\n",
+    "token = getpass.getpass(\"GitHub Personal Access Token (PAT): \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "795dac33-3a26-40cd-b517-59b8600f68f8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "\n",
+    "### Explanation\n",
+    "\n",
+    "- **`input(\"GitHub Username: \")`**: Prompts you to enter your GitHub username.\n",
+    "- **`getpass.getpass(\"GitHub Personal Access Token (PAT): \")`**: Prompts you to securely enter the PAT, keeping it hidden on the screen.\n"
    ]
   },
   {
@@ -100,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "633b7da6-05aa-4c0d-b9ad-1677100fb994",
    "metadata": {
     "tags": []
@@ -116,45 +120,85 @@
    ],
    "source": [
     "!pwd\n",
+    "# !cd test_AWS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c87d7e0-e14e-4b04-a5a2-5ac742e6b467",
+   "metadata": {},
+   "source": [
+    "\n",
+    "2. **Add and Commit Changes**:\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6fd3b984-2ae2-4c86-8bf7-57bf419dd1c0",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 25,
+   "id": "1681c48e-9d03-490a-ae4c-2ae84275c7ee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is ahead of 'origin/main' by 5 commits.\n",
+      "  (use \"git push\" to publish your local commits)\n",
+      "\n",
+      "nothing to commit, working tree clean\n"
+     ]
+    }
+   ],
    "source": [
-    "!cd test_AWS\n"
+    "!git add .\n",
+    "!git commit -m \"Added updates from Jupyter notebook\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dfce6eb-ee29-48bd-9895-56b0abf4b3e7",
+   "metadata": {},
+   "source": [
+    "3. **Push Changes and Enter Credentials**:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f0902b5e-88b5-463b-81c3-21659768819c",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 26,
+   "id": "86cd209c-9b93-488e-a159-f6f65f94511c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Username for 'https://github.com/UW-Madison-DataScience/test_AWS.git': ^C\n"
+     ]
+    }
+   ],
    "source": [
+    "# Push with embedded credentials from getpass (avoids interactive prompt)\n",
+    "!git push https://{username}:{token}@github.com/UW-Madison-DataScience/test_AWS.git main\n",
     "\n",
-    "2. **Add and Commit Changes**:\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76d73ae6-bb5b-4547-af25-0d1d2636084f",
+   "metadata": {},
+   "source": [
+    "When you run this `push` command, Git will prompt for:\n",
+    "- **Username**: Enter your GitHub username.\n",
+    "- **Password**: Paste your PAT (even though it’s called “password,” GitHub expects the PAT here).\n",
     "\n",
-    "   ```python\n",
-    "   !git add .\n",
-    "   !git commit -m \"Added updates from Jupyter notebook\"\n",
-    "   ```\n",
-    "\n",
-    "3. **Push Changes and Enter Credentials**:\n",
-    "\n",
-    "   ```python\n",
-    "   !git push origin main\n",
-    "   ```\n",
-    "\n",
-    "   When you run this `push` command, Git will prompt for:\n",
-    "   - **Username**: Enter your GitHub username.\n",
-    "   - **Password**: Paste your PAT (even though it’s called “password,” GitHub expects the PAT here).\n",
-    "\n",
-    "   This method securely avoids storing any credentials in the notebook environment or local files.\n",
+    "This method securely avoids storing any credentials in the notebook environment or local files.\n",
     "\n",
     "---\n",
     "\n",
@@ -162,22 +206,6 @@
     "\n",
     "By entering credentials manually for each push, you prevent storing sensitive information, maintaining the security of your PAT and GitHub account. This is the most secure approach, particularly in shared or temporary environments like SageMaker notebooks."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1681c48e-9d03-490a-ae4c-2ae84275c7ee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "294ff976-d89c-4fdd-81af-12dd258822e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
