Added updates from Jupyter notebook

--- a/push-updates.ipynb
+++ b/push-updates.ipynb
@@ -55,27 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "b41eaac5-69eb-4e88-8bda-1ba7e25a0beb",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "GitHub Username:  qualiaMachine\n",
-      "GitHub Personal Access Token (PAT):  ········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import getpass\n",
     "\n",
     "# Prompt for GitHub username and PAT securely\n",
-    "username = input(\"GitHub Username: \")\n",
-    "token = getpass.getpass(\"GitHub Personal Access Token (PAT): \")"
+    "# github_url = 'github.com/UW-Madison-DataScience/test_AWS.git' # found under Code -> Clone -> HTTPS (remote the https:// before the rest of the address)\n",
+    "# username = input(\"GitHub Username: \")\n",
+    "# token = getpass.getpass(\"GitHub Personal Access Token (PAT): \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b1856be-09fe-4010-94d0-02666b2b6a28",
+   "metadata": {},
+   "source": [
+    "**Note**: After running, you may want to comment out the above code so that you don't have to enter in your login every time you run your whole notebook"
    ]
   },
   {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "633b7da6-05aa-4c0d-b9ad-1677100fb994",
    "metadata": {
     "tags": []
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "1681c48e-9d03-490a-ae4c-2ae84275c7ee",
    "metadata": {
     "tags": []
@@ -145,17 +145,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\n",
-      "Your branch is ahead of 'origin/main' by 5 commits.\n",
-      "  (use \"git push\" to publish your local commits)\n",
-      "\n",
-      "nothing to commit, working tree clean\n"
+      "[main b5551f2] Added updates from Jupyter notebook\n",
+      " 1 file changed, 99 insertions(+), 71 deletions(-)\n"
      ]
     }
    ],
    "source": [
     "!git add .\n",
     "!git commit -m \"Added updates from Jupyter notebook\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cebecd0-9f39-43c6-8efa-070c7748c52c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "3. **Pull the Latest Changes from the Main Branch**: Pull the latest changes from the remote main branch to ensure your local branch is up-to-date.\n",
+    "\n",
+    "    Recommended: Set the Pull Strategy for this Repository (Merge by Default)\n",
+    "\n",
+    "    All options:\n",
+    "\n",
+    "    * Merge (pull.rebase false): Combines the remote changes into your local branch as a merge commit.\n",
+    "    * Rebase (pull.rebase true): Replays your local changes on top of the updated main branch, resulting in a linear history.\n",
+    "    * Fast-forward only (pull.ff only): Only pulls if the local branch can fast-forward to the remote without diverging (no new commits locally)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "144840f8-9733-4888-99d4-3b04c12458ee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/UW-Madison-DataScience/test_AWS\n",
+      " * branch            main       -> FETCH_HEAD\n",
+      "Auto-merging train_nn.py\n",
+      "CONFLICT (add/add): Merge conflict in train_nn.py\n",
+      "Auto-merging train_xgboost.py\n",
+      "CONFLICT (content): Merge conflict in train_xgboost.py\n",
+      "Automatic merge failed; fix conflicts and then commit the result.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git config pull.rebase false # Combines the remote changes into your local branch as a merge commit.\n",
+    "\n",
+    "!git pull origin main\n"
    ]
   },
   {
@@ -168,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "86cd209c-9b93-488e-a159-f6f65f94511c",
    "metadata": {
     "tags": []
@@ -178,13 +221,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Username for 'https://github.com/UW-Madison-DataScience/test_AWS.git': ^C\n"
+      "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
+      " \u001b[31m! [rejected]       \u001b[m main -> main (fetch first)\n",
+      "\u001b[31merror: failed to push some refs to 'https://github.com/UW-Madison-DataScience/test_AWS.git'\n",
+      "\u001b[m\u001b[33mhint: Updates were rejected because the remote contains work that you do\u001b[m\n",
+      "\u001b[33mhint: not have locally. This is usually caused by another repository pushing\u001b[m\n",
+      "\u001b[33mhint: to the same ref. You may want to first integrate the remote changes\u001b[m\n",
+      "\u001b[33mhint: (e.g., 'git pull ...') before pushing again.\u001b[m\n",
+      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n"
      ]
     }
    ],
    "source": [
     "# Push with embedded credentials from getpass (avoids interactive prompt)\n",
-    "!git push https://{username}:{token}@github.com/UW-Madison-DataScience/test_AWS.git main\n",
+    "!git push https://{username}:{token}@{github_url} main\n",
     "\n",
     " "
    ]
