Added updates from Jupyter notebook

--- a/push-git-updates.ipynb
+++ b/push-git-updates.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "1681c48e-9d03-490a-ae4c-2ae84275c7ee",
    "metadata": {
     "tags": []
@@ -164,9 +164,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main ebe991c] Added updates from Jupyter notebook\n",
-      " 3 files changed, 261 insertions(+), 2635 deletions(-)\n",
-      " delete mode 100644 01_intro-train-models.ipynb\n"
+      "[main 2ff6cf0] Added updates from Jupyter notebook\n",
+      " 2 files changed, 136 insertions(+), 166 deletions(-)\n",
+      " rename .ipynb_checkpoints/{push-updates-checkpoint.ipynb => push-git-updates-checkpoint.ipynb} (72%)\n",
+      " rename push-updates.ipynb => push-git-updates.ipynb (72%)\n"
      ]
     }
    ],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "id": "144840f8-9733-4888-99d4-3b04c12458ee",
    "metadata": {
     "tags": []
@@ -207,11 +208,8 @@
      "text": [
       "From https://github.com/UW-Madison-DataScience/test_AWS\n",
       " * branch            main       -> FETCH_HEAD\n",
-      "Auto-merging train_nn.py\n",
-      "CONFLICT (add/add): Merge conflict in train_nn.py\n",
-      "Auto-merging train_xgboost.py\n",
-      "CONFLICT (content): Merge conflict in train_xgboost.py\n",
-      "Automatic merge failed; fix conflicts and then commit the result.\n"
+      "   ad8e1c0..ebe991c  main       -> origin/main\n",
+      "Already up to date.\n"
      ]
     }
    ],
@@ -231,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "31ed04f1-6a2d-4d04-bda9-cdd9dc8f84ce",
    "metadata": {
     "tags": []
@@ -262,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "id": "86cd209c-9b93-488e-a159-f6f65f94511c",
    "metadata": {
     "tags": []
@@ -272,7 +270,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\n"
+      "Enumerating objects: 6, done.\n",
+      "Counting objects: 100% (6/6), done.\n",
+      "Delta compression using up to 2 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 4.03 KiB | 4.03 MiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
+      "   ebe991c..2ff6cf0  main -> main\n"
      ]
     }
    ],
@@ -281,20 +287,6 @@
     "!git push https://{username}:{token}@{github_url} main\n",
     "\n",
     " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76d73ae6-bb5b-4547-af25-0d1d2636084f",
-   "metadata": {},
-   "source": [
-    "When you run this `push` command, Git will prompt for:\n",
-    "- **Username**: Enter your GitHub username.\n",
-    "- **Password**: Paste your PAT (even though it’s called “password,” GitHub expects the PAT here).\n",
-    "\n",
-    "This method securely avoids storing any credentials in the notebook environment or local files.\n",
-    "\n",
-    "\n"
    ]
   }
  ],
