Added updates from Jupyter notebook

--- a/04_Interacting-with-code-repo.ipynb
+++ b/04_Interacting-with-code-repo.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "id": "1681c48e-9d03-490a-ae4c-2ae84275c7ee",
    "metadata": {
     "tags": []
@@ -164,10 +164,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 2ff6cf0] Added updates from Jupyter notebook\n",
-      " 2 files changed, 136 insertions(+), 166 deletions(-)\n",
-      " rename .ipynb_checkpoints/{push-updates-checkpoint.ipynb => push-git-updates-checkpoint.ipynb} (72%)\n",
-      " rename push-updates.ipynb => push-git-updates.ipynb (72%)\n"
+      "[main 637d64c] Added updates from Jupyter notebook\n",
+      " 1 file changed, 19 insertions(+), 27 deletions(-)\n"
      ]
     }
    ],
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "id": "144840f8-9733-4888-99d4-3b04c12458ee",
    "metadata": {
     "tags": []
@@ -206,10 +204,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "remote: Enumerating objects: 7, done.\u001b[K\n",
+      "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+      "remote: Total 6 (delta 2), reused 3 (delta 1), pack-reused 0 (from 0)\u001b[K\n",
+      "Unpacking objects: 100% (6/6), 1.18 KiB | 1.18 MiB/s, done.\n",
       "From https://github.com/UW-Madison-DataScience/test_AWS\n",
       " * branch            main       -> FETCH_HEAD\n",
-      "   ad8e1c0..ebe991c  main       -> origin/main\n",
-      "Already up to date.\n"
+      "   ebe991c..adfe7b1  main       -> origin/main\n",
+      "Updating 2ff6cf0..adfe7b1\n",
+      "Fast-forward\n",
+      " .gitignore                                         |    3 \u001b[32m+\u001b[m\n",
+      " ...storage-and-access-via-buckets-checkpoint.ipynb |    6 \u001b[31m-\u001b[m\n",
+      " .../01_Intro-train-models-checkpoint.ipynb         | 2555 \u001b[31m--------------------\u001b[m\n",
+      " .../02_Hyperparameter-tuning-checkpoint.ipynb      |  470 \u001b[31m----\u001b[m\n",
+      " .../create_large_data-checkpoint.ipynb             |   54 \u001b[31m-\u001b[m\n",
+      " .../push-git-updates-checkpoint.ipynb              |  322 \u001b[31m---\u001b[m\n",
+      " .ipynb_checkpoints/train_nn-checkpoint.py          |   93 \u001b[31m-\u001b[m\n",
+      " .ipynb_checkpoints/train_xgboost-checkpoint.py     |   65 \u001b[31m-\u001b[m\n",
+      " __pycache__/train_xgboost.cpython-310.pyc          |  Bin \u001b[31m2194\u001b[m -> \u001b[32m0\u001b[m bytes\n",
+      " 9 files changed, 3 insertions(+), 3565 deletions(-)\n",
+      " create mode 100644 .gitignore\n",
+      " delete mode 100644 .ipynb_checkpoints/00_Data-storage-and-access-via-buckets-checkpoint.ipynb\n",
+      " delete mode 100644 .ipynb_checkpoints/01_Intro-train-models-checkpoint.ipynb\n",
+      " delete mode 100644 .ipynb_checkpoints/02_Hyperparameter-tuning-checkpoint.ipynb\n",
+      " delete mode 100644 .ipynb_checkpoints/create_large_data-checkpoint.ipynb\n",
+      " delete mode 100644 .ipynb_checkpoints/push-git-updates-checkpoint.ipynb\n",
+      " delete mode 100644 .ipynb_checkpoints/train_nn-checkpoint.py\n",
+      " delete mode 100644 .ipynb_checkpoints/train_xgboost-checkpoint.py\n",
+      " delete mode 100644 __pycache__/train_xgboost.cpython-310.pyc\n"
      ]
     }
    ],
@@ -229,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "31ed04f1-6a2d-4d04-bda9-cdd9dc8f84ce",
    "metadata": {
     "tags": []
@@ -260,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "86cd209c-9b93-488e-a159-f6f65f94511c",
    "metadata": {
     "tags": []
@@ -270,15 +293,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 6, done.\n",
-      "Counting objects: 100% (6/6), done.\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 2 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 4.03 KiB | 4.03 MiB/s, done.\n",
-      "Total 4 (delta 2), reused 0 (delta 0), pack-reused 0\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 780 bytes | 780.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
-      "   ebe991c..2ff6cf0  main -> main\n"
+      "   adfe7b1..637d64c  main -> main\n"
      ]
     }
    ],
@@ -288,6 +311,14 @@
     "\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34b627ea-b2e4-439f-91e9-4dc2b0244aeb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
