Updates from Jupyter notebooks

--- a/04_Interacting-with-code-repo.ipynb
+++ b/04_Interacting-with-code-repo.ipynb
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 79,
    "id": "1681c48e-9d03-490a-ae4c-2ae84275c7ee",
    "metadata": {
     "tags": []
@@ -972,15 +972,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 0363cc2] Added updates from Jupyter notebook\n",
-      " 7 files changed, 416 insertions(+), 91 deletions(-)\n",
-      " delete mode 100644 00_Data-storage-and-access-via-buckets.ipynb\n",
-      " create mode 100644 01_Setting-up-S3-bucket.md\n",
-      " create mode 100644 02_Setting-up-notebook-environment.md\n",
-      " create mode 100644 03_Data-storage-and-access-via-buckets.ipynb\n",
-      " rename push-git-updates.ipynb => 04_Interacting-with-code-repo.ipynb (77%)\n",
-      " rename 01_Intro-train-models.ipynb => 05_Intro-train-models.ipynb (100%)\n",
-      " rename 02_Hyperparameter-tuning.ipynb => 06_Hyperparameter-tuning.ipynb (100%)\n"
+      "[main bc28ce1] Updates from Jupyter notebooks\n",
+      " 1 file changed, 875 insertions(+), 56 deletions(-)\n"
      ]
     }
    ],
@@ -1009,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 80,
    "id": "144840f8-9733-4888-99d4-3b04c12458ee",
    "metadata": {
     "tags": []
@@ -1021,7 +1014,7 @@
      "text": [
       "From https://github.com/UW-Madison-DataScience/test_AWS\n",
       " * branch            main       -> FETCH_HEAD\n",
-      "   adfe7b1..637d64c  main       -> origin/main\n",
+      "   637d64c..0363cc2  main       -> origin/main\n",
       "Already up to date.\n"
      ]
     }
@@ -1073,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "id": "86cd209c-9b93-488e-a159-f6f65f94511c",
    "metadata": {
     "tags": []
@@ -1083,15 +1076,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 2 threads\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 11.22 KiB | 5.61 MiB/s, done.\n",
-      "Total 6 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 10.51 KiB | 5.25 MiB/s, done.\n",
+      "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
       "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
       "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
-      "   637d64c..0363cc2  main -> main\n"
+      "   0363cc2..bc28ce1  main -> main\n"
      ]
     }
    ],
@@ -1137,6 +1130,26 @@
    "source": [
     "# Replace 'your_script.py' with your actual filename\n",
     "!jupytext --to notebook 03_Data-storage-and-access-via-buckets.py --output 03_Data-storage-and-access-via-buckets-test.ipynb\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f86a6d55-5279-423f-864a-7810dd414def",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "import os\n",
+    "\n",
+    "# List all .py files in the directory\n",
+    "scripts = [f for f in os.listdir() if f.endswith('.py')]\n",
+    "\n",
+    "# Convert each .py file to .ipynb using jupytext\n",
+    "for script in scripts:\n",
+    "    output_file = script.replace('.py', '.ipynb')\n",
+    "    subprocess.run([\"jupytext\", \"--to\", \"notebook\", script, \"--output\", output_file])\n",
+    "    print(f\"Converted {script} to {output_file}\")\n"
    ]
   }
  ],
