--- a/03_Data-storage-and-access-via-buckets.ipynb
+++ b/03_Data-storage-and-access-via-buckets.ipynb
@@ -2,40 +2,276 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3eb3ff82-e229-4a95-8d54-b9cd914fbc8b",
+   "id": "f04814a0-86ef-4268-a779-cd6dc62c5cf7",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 1A. Read data from S3 into memory\n",
+    "Our data is stored on an S3 bucket called 'titanic-dataset-test'. We can use the following code to read data directly from S3 into memory in the Jupyter notebook environment, without actually downloading a copy of train.csv as a local file.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6fbbf0be-ae55-4020-88ce-35dd4455d6ca",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(712, 12)\n",
+      "(179, 12)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>693</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Lam, Mr. Ali</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1601</td>\n",
+       "      <td>56.4958</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>482</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Frost, Mr. Anthony Wood \"Archie\"</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>239854</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>528</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Farthing, Mr. John</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17483</td>\n",
+       "      <td>221.7792</td>\n",
+       "      <td>C95</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>856</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Aks, Mrs. Sam (Leah Rosen)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>392091</td>\n",
+       "      <td>9.3500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>802</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Collyer, Mrs. Harvey (Charlotte Annie Tate)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>C.A. 31921</td>\n",
+       "      <td>26.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass                                         Name  \\\n",
+       "0          693         1       3                                 Lam, Mr. Ali   \n",
+       "1          482         0       2             Frost, Mr. Anthony Wood \"Archie\"   \n",
+       "2          528         0       1                           Farthing, Mr. John   \n",
+       "3          856         1       3                   Aks, Mrs. Sam (Leah Rosen)   \n",
+       "4          802         1       2  Collyer, Mrs. Harvey (Charlotte Annie Tate)   \n",
+       "\n",
+       "      Sex   Age  SibSp  Parch      Ticket      Fare Cabin Embarked  \n",
+       "0    male   NaN      0      0        1601   56.4958   NaN        S  \n",
+       "1    male   NaN      0      0      239854    0.0000   NaN        S  \n",
+       "2    male   NaN      0      0    PC 17483  221.7792   C95        S  \n",
+       "3  female  18.0      0      1      392091    9.3500   NaN        S  \n",
+       "4  female  31.0      1      1  C.A. 31921   26.2500   NaN        S  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "import pandas as pd\n",
+    "import sagemaker\n",
+    "from sagemaker import get_execution_role\n",
+    "\n",
+    "# Initialize the SageMaker role and session\n",
+    "# Define the SageMaker role and session\n",
+    "role = sagemaker.get_execution_role()\n",
+    "session = sagemaker.Session()\n",
+    "s3 = boto3.client('s3')\n",
+    "\n",
+    "# Define the S3 bucket and object key\n",
+    "bucket = 'titanic-dataset-test'  # replace with your S3 bucket name\n",
+    "key = 'data/titanic_train.csv'  # replace with your object key\n",
+    "\n",
+    "# Read the object from S3\n",
+    "response = s3.get_object(Bucket=bucket, Key=key)\n",
+    "\n",
+    "# Load the data into a pandas DataFrame\n",
+    "train_data = pd.read_csv(response['Body'])\n",
+    "\n",
+    "key = 'data/titanic_test.csv'  # replace with your object key\n",
+    "response = s3.get_object(Bucket=bucket, Key=key)\n",
+    "test_data = pd.read_csv(response['Body'])\n",
+    "\n",
+    "# check shape\n",
+    "print(train_data.shape)\n",
+    "print(test_data.shape)\n",
+    "\n",
+    "# Inspect the first few rows of the DataFrame\n",
+    "train_data.head()\n",
+    "# train_data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07ecb6e1-c8ad-417a-932f-281b9f6aafeb",
+   "metadata": {},
+   "source": [
+    "## 1B. Download copy into notebook environment\n",
+    "If you have larger dataset (> 1GB), you may want to skip this step and always read directly into memory. However, for smaller datasets, it can be convenient to have a \"local copy.\n",
+    "\n",
+    "Download data from S3 to notebook environment. You may need to hit refresh on the file explorer panel to the left to see this file. If you get any permission issues...\n",
+    "\n",
+    "* check that you have selected the appropriate policy for this notebook\n",
+    "* check that your bucket has the appropriate policy permissions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "86c8e06f-50f1-4f12-9b3d-32f0bdc711da",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File downloaded: ./titanic_train.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the S3 bucket and file location\n",
+    "file_key = \"data/titanic_train.csv\"  # Path to your file in the S3 bucket\n",
+    "local_file_path = \"./titanic_train.csv\"  # Local path to save the file\n",
+    "\n",
+    "# Initialize the S3 client and download the file\n",
+    "s3 = boto3.client(\"s3\")\n",
+    "s3.download_file(bucket, file_key, local_file_path)\n",
+    "print(\"File downloaded:\", local_file_path)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "61165195-70f5-45c0-aaad-ffb975ebc6ef",
    "metadata": {},
    "source": [
-    "## Pushing new files to bucket from notebook environment"
+    "## 2. Pushing new files from notebook environment to bucket\n",
+    "As your analysis generates new files, you can upload to your bucket as demonstrated below. For this demo, you can create a blank `results.txt` file to upload to your bucket."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2974d63f-cf39-4ff6-8544-ac8aa6be5e24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files uploaded successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "import boto3\n",
     "\n",
     "# Define the S3 bucket name and the file paths\n",
     "bucket_name = \"titanic-dataset-test\"\n",
-    "train_file_path = \"titanic_train.csv\"\n",
-    "test_file_path = \"titanic_test.csv\"\n",
+    "train_file_path = \"results.txt\"\n",
     "\n",
     "# Initialize the S3 client\n",
     "s3 = boto3.client('s3')\n",
     "\n",
     "# Upload the training file\n",
-    "s3.upload_file(train_file_path, bucket_name, \"data/titanic_train.csv\")\n",
-    "\n",
-    "# Upload the test file\n",
-    "s3.upload_file(test_file_path, bucket_name, \"data/titanic_test.csv\")\n",
+    "s3.upload_file(train_file_path, bucket_name, \"results/results.txt\")\n",
     "\n",
     "print(\"Files uploaded successfully.\")\n"
    ]
@@ -45,7 +281,7 @@
    "id": "caf6e7f1-19f9-458c-b7e1-f2702d491cd1",
    "metadata": {},
    "source": [
-    "## Check current size and storage costs of bucket"
+    "## 3. Check current size and storage costs of bucket"
    ]
   },
   {
@@ -53,17 +289,14 @@
    "id": "b0a71377-900f-4314-9017-d36cb83b2d58",
    "metadata": {},
    "source": [
-    "Yu can check the size of an S3 bucket directly from a Jupyter notebook in SageMaker by using the **Boto3** library, which is the AWS SDK for Python. This will allow you to calculate the total size of objects within a specified bucket.\n",
+    "It's a good idea to periodically check how much storage you have used in your bucket. You can do this from a Jupyter notebook in SageMaker by using the **Boto3** library, which is the AWS SDK for Python. This will allow you to calculate the total size of objects within a specified bucket. Here’s how you can do it...\n",
     "\n",
-    "Here’s how you can do it:\n",
-    "\n",
-    "### Step 1: Set Up the S3 Client and Calculate Bucket Size\n",
-    "\n"
+    "### Step 1: Set Up the S3 Client and Calculate Bucket Size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "50c2044c-acb4-48f5-b755-570d1cc4ecbb",
    "metadata": {
     "tags": []
@@ -73,7 +306,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total size of bucket 'titanic-dataset-test': 27.08 MB\n"
+      "Total size of bucket 'titanic-dataset-test': 27.14 MB\n"
      ]
     }
    ],
@@ -96,7 +329,7 @@
     "\n",
     "# Convert the total size to gigabytes for cost estimation\n",
     "total_size_gb = total_size_bytes / (1024 ** 3)\n",
-    "# print(f\"Total size of bucket '{bucket_name}': {total_size_gb:.2f} GB\")\n",
+    "# print(f\"Total size of bucket '{bucket_name}': {total_size_gb:.2f} GB\") # can uncomment this if you want GB reported\n",
     "\n",
     "# Convert the total size to megabytes for readability\n",
     "total_size_mb = total_size_bytes / (1024 ** 2)\n",
@@ -122,7 +355,7 @@
    "id": "3ecf5a8c-8f28-42a8-be40-a6f155db96e6",
    "metadata": {},
    "source": [
-    "### Step 2: Check storage costs of bucket\n",
+    "## 4: Check storage costs of bucket\n",
     "To estimate the storage cost of your Amazon S3 bucket directly from a Jupyter notebook in SageMaker, you can use the following approach. This method calculates the total size of the bucket and estimates the monthly storage cost based on AWS S3 pricing.\n",
     "\n",
     "**Note**: AWS S3 pricing varies by region and storage class. The example below uses the S3 Standard storage class pricing for the US East (N. Virginia) region as of November 1, 2024. Please verify the current pricing for your specific region and storage class on the [AWS S3 Pricing page](https://aws.amazon.com/s3/pricing/).\n",
@@ -131,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "999a7e66-04e3-4577-b7ab-4ca9472e3ae6",
    "metadata": {
     "tags": []
