--- a/05_Intro-train-models.ipynb
+++ b/05_Intro-train-models.ipynb
@@ -11,189 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "054fc92d-acab-40c5-88cc-f590e322f053",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Braund, Mr. Owen Harris</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>A/5 21171</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>C85</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Heikkinen, Miss. Laina</td>\n",
-       "      <td>female</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>STON/O2. 3101282</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>C123</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Allen, Mr. William Henry</td>\n",
-       "      <td>male</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Survived  Pclass  \\\n",
-       "0            1         0       3   \n",
-       "1            2         1       1   \n",
-       "2            3         1       3   \n",
-       "3            4         1       1   \n",
-       "4            5         0       3   \n",
-       "\n",
-       "                                                Name     Sex   Age  SibSp  \\\n",
-       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-       "\n",
-       "   Parch            Ticket     Fare Cabin Embarked  \n",
-       "0      0         A/5 21171   7.2500   NaN        S  \n",
-       "1      0          PC 17599  71.2833   C85        C  \n",
-       "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-       "3      0            113803  53.1000  C123        S  \n",
-       "4      0            373450   8.0500   NaN        S  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import boto3\n",
-    "import pandas as pd\n",
-    "import sagemaker\n",
-    "from sagemaker import get_execution_role\n",
-    "\n",
-    "# Initialize the SageMaker role and session\n",
-    "# Define the SageMaker role and session\n",
-    "role = sagemaker.get_execution_role()\n",
-    "session = sagemaker.Session()\n",
-    "s3 = boto3.client('s3')\n",
-    "\n",
-    "# Define the S3 bucket and object key\n",
-    "bucket = 'titanic-dataset-test'  # replace with your S3 bucket name\n",
-    "key = 'train.csv'  # replace with your object key\n",
-    "\n",
-    "# Read the object from S3\n",
-    "response = s3.get_object(Bucket=bucket, Key=key)\n",
-    "\n",
-    "# Load the data into a pandas DataFrame\n",
-    "train_data = pd.read_csv(response['Body'])\n",
-    "\n",
-    "# check shape\n",
-    "print(train_data.shape)\n",
-    "\n",
-    "# Inspect the first few rows of the DataFrame\n",
-    "train_data.head()\n",
-    "# train_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "2ecf8c4f-eb43-465b-8862-15f062733371",
    "metadata": {
     "tags": []
    },
@@ -243,164 +62,138 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>565</th>\n",
-       "      <td>566</td>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
+       "      <td>693</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>Davies, Mr. Alfred J</td>\n",
+       "      <td>Lam, Mr. Ali</td>\n",
        "      <td>male</td>\n",
-       "      <td>24.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1601</td>\n",
+       "      <td>56.4958</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>482</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>Frost, Mr. Anthony Wood \"Archie\"</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0</td>\n",
-       "      <td>A/4 48871</td>\n",
-       "      <td>24.1500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>239854</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>161</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Cribb, Mr. John Hatfield</td>\n",
-       "      <td>male</td>\n",
-       "      <td>44.0</td>\n",
+       "      <th>2</th>\n",
+       "      <td>528</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>371362</td>\n",
-       "      <td>16.1000</td>\n",
+       "      <td>Farthing, Mr. John</td>\n",
+       "      <td>male</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17483</td>\n",
+       "      <td>221.7792</td>\n",
+       "      <td>C95</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>553</th>\n",
-       "      <td>554</td>\n",
+       "      <th>3</th>\n",
+       "      <td>856</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>Leeni, Mr. Fahim (\"Philip Zenni\")</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2620</td>\n",
-       "      <td>7.2250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>860</th>\n",
-       "      <td>861</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Hansen, Mr. Claus Peter</td>\n",
-       "      <td>male</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>350026</td>\n",
-       "      <td>14.1083</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>241</th>\n",
-       "      <td>242</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Murphy, Miss. Katherine \"Kate\"</td>\n",
+       "      <td>Aks, Mrs. Sam (Leah Rosen)</td>\n",
        "      <td>female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>18.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>367230</td>\n",
-       "      <td>15.5000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>392091</td>\n",
+       "      <td>9.3500</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>802</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Collyer, Mrs. Harvey (Charlotte Annie Tate)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>C.A. 31921</td>\n",
+       "      <td>26.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     PassengerId  Survived  Pclass                               Name     Sex  \\\n",
-       "565          566         0       3               Davies, Mr. Alfred J    male   \n",
-       "160          161         0       3           Cribb, Mr. John Hatfield    male   \n",
-       "553          554         1       3  Leeni, Mr. Fahim (\"Philip Zenni\")    male   \n",
-       "860          861         0       3            Hansen, Mr. Claus Peter    male   \n",
-       "241          242         1       3     Murphy, Miss. Katherine \"Kate\"  female   \n",
+       "   PassengerId  Survived  Pclass                                         Name  \\\n",
+       "0          693         1       3                                 Lam, Mr. Ali   \n",
+       "1          482         0       2             Frost, Mr. Anthony Wood \"Archie\"   \n",
+       "2          528         0       1                           Farthing, Mr. John   \n",
+       "3          856         1       3                   Aks, Mrs. Sam (Leah Rosen)   \n",
+       "4          802         1       2  Collyer, Mrs. Harvey (Charlotte Annie Tate)   \n",
        "\n",
-       "      Age  SibSp  Parch     Ticket     Fare Cabin Embarked  \n",
-       "565  24.0      2      0  A/4 48871  24.1500   NaN        S  \n",
-       "160  44.0      0      1     371362  16.1000   NaN        S  \n",
-       "553  22.0      0      0       2620   7.2250   NaN        C  \n",
-       "860  41.0      2      0     350026  14.1083   NaN        S  \n",
-       "241   NaN      1      0     367230  15.5000   NaN        Q  "
+       "      Sex   Age  SibSp  Parch      Ticket      Fare Cabin Embarked  \n",
+       "0    male   NaN      0      0        1601   56.4958   NaN        S  \n",
+       "1    male   NaN      0      0      239854    0.0000   NaN        S  \n",
+       "2    male   NaN      0      0    PC 17483  221.7792   C95        S  \n",
+       "3  female  18.0      0      1      392091    9.3500   NaN        S  \n",
+       "4  female  31.0      1      1  C.A. 31921   26.2500   NaN        S  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# Assuming your target variable is named 'target'\n",
-    "train_df, test_df = train_test_split(train_data, test_size=0.2, random_state=42, stratify=df['Survived'])\n",
-    "print(train_df.shape)\n",
-    "print(test_df.shape)\n",
-    "test_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4a2d1e4c-09db-46d5-991f-37f479580d20",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Save the training set\n",
-    "train_df.to_csv(\"titanic_train.csv\", index=False)\n",
-    "\n",
-    "# Save the test set\n",
-    "test_df.to_csv(\"titanic_test.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "489630b7-0cbc-4423-b7e8-33fd3b909b22",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files uploaded successfully.\n"
-     ]
-    }
-   ],
-   "source": [
     "import boto3\n",
+    "import pandas as pd\n",
+    "import sagemaker\n",
+    "from sagemaker import get_execution_role\n",
     "\n",
-    "# Define the S3 bucket name and the file paths\n",
-    "train_file_path = \"titanic_train.csv\"\n",
-    "test_file_path = \"titanic_test.csv\"\n",
-    "\n",
-    "# Initialize the S3 client\n",
+    "# Initialize the SageMaker role and session\n",
+    "# Define the SageMaker role and session\n",
+    "role = sagemaker.get_execution_role()\n",
+    "session = sagemaker.Session()\n",
     "s3 = boto3.client('s3')\n",
     "\n",
-    "# Upload the training file\n",
-    "s3.upload_file(train_file_path, bucket, \"data/titanic_train.csv\")\n",
+    "# Define the S3 bucket and object key\n",
+    "bucket = 'titanic-dataset-test'  # replace with your S3 bucket name\n",
+    "key = 'data/titanic_train.csv'  # replace with your object key\n",
     "\n",
-    "# Upload the test file\n",
-    "s3.upload_file(test_file_path, bucket, \"data/titanic_test.csv\")\n",
+    "# Read the object from S3\n",
+    "response = s3.get_object(Bucket=bucket, Key=key)\n",
     "\n",
-    "print(\"Files uploaded successfully.\")\n"
+    "# Load the data into a pandas DataFrame\n",
+    "train_data = pd.read_csv(response['Body'])\n",
+    "\n",
+    "key = 'data/titanic_test.csv'  # replace with your object key\n",
+    "response = s3.get_object(Bucket=bucket, Key=key)\n",
+    "test_data = pd.read_csv(response['Body'])\n",
+    "\n",
+    "# check shape\n",
+    "print(train_data.shape)\n",
+    "print(test_data.shape)\n",
+    "\n",
+    "# Inspect the first few rows of the DataFrame\n",
+    "train_data.head()\n",
+    "# train_data.shape"
    ]
   },
   {
@@ -419,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "44edeebe-6af2-411d-a389-2b50fa648cd5",
    "metadata": {
     "tags": []
@@ -429,14 +222,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File downloaded: ./train.csv\n"
+      "File downloaded: ./titanic_train.csv\n"
      ]
     }
    ],
    "source": [
     "# Define the S3 bucket and file location\n",
-    "file_key = \"train.csv\"  # Path to your file in the S3 bucket\n",
-    "local_file_path = \"./train.csv\"  # Local path to save the file\n",
+    "file_key = \"data/titanic_train.csv\"  # Path to your file in the S3 bucket\n",
+    "local_file_path = \"./titanic_train.csv\"  # Local path to save the file\n",
     "\n",
     "# Initialize the S3 client and download the file\n",
     "s3 = boto3.client(\"s3\")\n",
