Updates from Jupyter notebooks

--- a/03_Data-storage-and-access-via-buckets.ipynb
+++ b/03_Data-storage-and-access-via-buckets.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "source": [
     "## 1B. Download copy into notebook environment\n",
-    "If you have larger dataset (> 1GB), you may want to skip this step and always read directly into memory. However, for smaller datasets, it can be convenient to have a \"local copy.\n",
+    "If you have larger dataset (> 1GB), you may want to skip this step and always read directly into memory. However, for smaller datasets, it can be convenient to have a \"local\" copy (i.e., one stored in your notebook's instance).\n",
     "\n",
     "Download data from S3 to notebook environment. You may need to hit refresh on the file explorer panel to the left to see this file. If you get any permission issues...\n",
     "\n",
@@ -239,49 +239,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61165195-70f5-45c0-aaad-ffb975ebc6ef",
-   "metadata": {},
-   "source": [
-    "## 2. Pushing new files from notebook environment to bucket\n",
-    "As your analysis generates new files, you can upload to your bucket as demonstrated below. For this demo, you can create a blank `results.txt` file to upload to your bucket."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "2974d63f-cf39-4ff6-8544-ac8aa6be5e24",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Files uploaded successfully.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import boto3\n",
-    "\n",
-    "# Define the S3 bucket name and the file paths\n",
-    "bucket_name = \"titanic-dataset-test\"\n",
-    "train_file_path = \"results.txt\"\n",
-    "\n",
-    "# Initialize the S3 client\n",
-    "s3 = boto3.client('s3')\n",
-    "\n",
-    "# Upload the training file\n",
-    "s3.upload_file(train_file_path, bucket_name, \"results/results.txt\")\n",
-    "\n",
-    "print(\"Files uploaded successfully.\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "caf6e7f1-19f9-458c-b7e1-f2702d491cd1",
    "metadata": {},
    "source": [
-    "## 3. Check current size and storage costs of bucket"
+    "## 2. Check current size and storage costs of bucket"
    ]
   },
   {
@@ -355,7 +316,7 @@
    "id": "3ecf5a8c-8f28-42a8-be40-a6f155db96e6",
    "metadata": {},
    "source": [
-    "## 4: Check storage costs of bucket\n",
+    "## 3: Check storage costs of bucket\n",
     "To estimate the storage cost of your Amazon S3 bucket directly from a Jupyter notebook in SageMaker, you can use the following approach. This method calculates the total size of the bucket and estimates the monthly storage cost based on AWS S3 pricing.\n",
     "\n",
     "**Note**: AWS S3 pricing varies by region and storage class. The example below uses the S3 Standard storage class pricing for the US East (N. Virginia) region as of November 1, 2024. Please verify the current pricing for your specific region and storage class on the [AWS S3 Pricing page](https://aws.amazon.com/s3/pricing/).\n",
@@ -416,6 +377,45 @@
     "\n",
     "For detailed and up-to-date information on AWS S3 pricing, please refer to the [AWS S3 Pricing page](https://aws.amazon.com/s3/pricing/).\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f60b6951-6549-41de-9948-0ee9832df0c1",
+   "metadata": {},
+   "source": [
+    "## 4. Pushing new files from notebook environment to bucket\n",
+    "As your analysis generates new files, you can upload to your bucket as demonstrated below. For this demo, you can create a blank `results.txt` file to upload to your bucket."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2974d63f-cf39-4ff6-8544-ac8aa6be5e24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files uploaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "\n",
+    "# Define the S3 bucket name and the file paths\n",
+    "bucket_name = \"titanic-dataset-test\"\n",
+    "train_file_path = \"results.txt\"\n",
+    "\n",
+    "# Initialize the S3 client\n",
+    "s3 = boto3.client('s3')\n",
+    "\n",
+    "# Upload the training file\n",
+    "s3.upload_file(train_file_path, bucket_name, \"results/results.txt\")\n",
+    "\n",
+    "print(\"Files uploaded successfully.\")\n"
    ]
   }
  ],
