--- a/04_Interacting-with-code-repo.ipynb
+++ b/04_Interacting-with-code-repo.ipynb
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 89,
    "id": "1681c48e-9d03-490a-ae4c-2ae84275c7ee",
    "metadata": {
     "tags": []
@@ -483,8 +483,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main c49ab7e] Updates from Jupyter notebooks\n",
-      " 1 file changed, 120 insertions(+), 569 deletions(-)\n"
+      "[main 8102f2c] Updates from Jupyter notebooks\n",
+      " 8 files changed, 622 insertions(+), 311 deletions(-)\n",
+      " create mode 100644 prep-train-test-sets.ipynb\n",
+      " rename train_nn.py => scripts/train_nn.py (100%)\n",
+      " rename train_xgboost.py => scripts/train_xgboost.py (100%)\n",
+      " create mode 100644 update-repo.ipynb\n"
      ]
     }
    ],
@@ -513,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 90,
    "id": "144840f8-9733-4888-99d4-3b04c12458ee",
    "metadata": {
     "tags": []
@@ -525,7 +529,7 @@
      "text": [
       "From https://github.com/UW-Madison-DataScience/test_AWS\n",
       " * branch            main       -> FETCH_HEAD\n",
-      "   0363cc2..bc28ce1  main       -> origin/main\n",
+      "   bc28ce1..22d83d0  main       -> origin/main\n",
       "Already up to date.\n"
      ]
     }
@@ -546,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 91,
    "id": "31ed04f1-6a2d-4d04-bda9-cdd9dc8f84ce",
    "metadata": {
     "tags": []
@@ -577,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 92,
    "id": "86cd209c-9b93-488e-a159-f6f65f94511c",
    "metadata": {
     "tags": []
@@ -587,15 +591,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
+      "Enumerating objects: 17, done.\n",
+      "Counting objects: 100% (17/17), done.\n",
       "Delta compression using up to 2 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 702 bytes | 702.00 KiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "Compressing objects: 100% (12/12), done.\n",
+      "Writing objects: 100% (12/12), 9.71 KiB | 2.43 MiB/s, done.\n",
+      "Total 12 (delta 8), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (8/8), completed with 4 local objects.\u001b[K\n",
       "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
-      "   bc28ce1..22d83d0  main -> main\n"
+      "   22d83d0..8102f2c  main -> main\n"
      ]
     }
    ],
